assets/global.css
@import url("~/assets/normalize.css");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  @apply box-border;
}

@layer base {
  html {
    @apply h-screen;
  }

  body {
    @apply text-base font-sans;
    @apply animate-fade;

    @apply h-screen;
    @apply overflow-y-auto;

    @apply p-safe m-0;
    
    @apply leading-normal font-normal;

    @apply font-400;

    @apply text-white bg-default-900;
  }

  a {
    @apply transition-colors;
    @apply no-underline;
    @apply text-inherit;

    &:hover {
      @apply text-accent;
    }
  }

  h1, h2, h3, h4, h5, h6 {
    @apply font-bold;
    @apply font-700;

    @apply my-2;
  }

  h1 {
    @apply text-3xl;
  }

  h2 {
    @apply text-2xl;
  }

  h3 {
    @apply text-xl;
  }

  h4 {
    @apply text-lg;
  }

  h5 {
    @apply text-base;
  }

  h6 {
    @apply text-base;
  }

  p {
    @apply mb-4;
  }

  hr {
    @apply border-default-600;
    @apply m-16 my-8;
  }

  ::-webkit-scrollbar {
    @apply w-2;
    @apply bg-default-800;
  }

  ::-webkit-scrollbar-track {
    @apply bg-none;
    @apply w-full;
  }

  ::-webkit-scrollbar-thumb {
    @apply bg-default-500 bg-clip-padding;
  }

  ::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:active {
    @apply bg-default-400 bg-clip-padding;
  }

  ::-webkit-scrollbar-button {
    @apply w-0 h-0 hidden;
  }

  ::-webkit-scrollbar-corner {
    @apply bg-transparent;
  }
}

